# histoprint

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  histoprint.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  text-histogram.py
.github/workflows/: pythonblack.yml  pythonpublish.yml  pythontests.yml
histoprint/: __init__.py  cli.py  formatter.py  rich.py  test.py
testdata/: 1D.txt  2D.txt
tests/: test.py  test_basic.py  test_cli.py
tests/data/: 2D-prefixable.csv  3D.csv  3D.txt
