[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4",
    "wheel"
]

build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "histoprint/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --showlocals --color=yes"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    "histoprint/version.py",
    "noxfile.py",
]

[tool.mypy]
files = ["histoprint"]
python_version = "3.6"
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "histoprint.version",
    "pandas",
    "uproot",
    "awkward",
]
ignore_missing_imports = true
