[metadata]
name = histoprint
description = histoprint
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/histoprint
author = Lukas Koch
author_email = lukas.koch@mailbox.org
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    click>=7.0.0
    numpy
python_requires = >=3.6,
zip_safe = True

[options.entry_points]
console_scripts =
    histoprint=histoprint.cli:histoprint

[options.extras_require]
root =
    awkward>=1
    uproot>=4
test =
    pytest>=4.6

[options.packages.find]
include =
    histoprint

[flake8]
# Remove:
# F403, F405: don't use import *, especially in a library
# F401: use __all__ = ("... to specify what is exported
# E741: Don't use "l", it looks like 1
#
ignore = E203, E231, E501, E722, W503, B950, F403, F405, F401, E741
select = C,E,F,W,T,B,B9,I
per-file-ignores =
    tests/*: T

[mypy]
files = histoprint
python_version = 3.6
warn_unused_configs = True

check_untyped_defs = True
