[metadata]
name = histoprint
description = Pretty print of NumPy (and other) histograms to the console
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/histoprint
author = Lukas Koch
author_email = lukas.koch@mailbox.org
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    click>=7.0.0
    numpy
    uhi>=0.2.1
python_requires = >=3.6,
zip_safe = True

[options.packages.find]
include =
    histoprint

[options.entry_points]
console_scripts =
    histoprint=histoprint.cli:histoprint

[options.extras_require]
boost =
    boost-histogram>=1.1
rich =
    rich>=12
test =
    pytest>=6.0
uproot =
    awkward>=1
    uproot>=4
